--- a/config/people/predrag.yml
+++ b/config/people/predrag.yml
@@ -1,11 +1,7 @@
 groups:
-    - groupa
+    - developer
 recipes:
-    mac_os_x:
-        - osxdefaults::set_computer_name
 attributes:
-    osxdefaults:
-        computername: MyComputerName
     homebrewalt:
         apps:
             - git-extras
